--- a/github/workflow/ci.yml
+++ b/github/workflow/ci.yml
@@ -1,26 +1,41 @@
-name: CI
+name: run main.py
 
 on:
-  push:
-    branches:
-      - main
-      - master
+  schedule:
+    - cron: '* * * * *' # At 00:00 on Monday
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: checkout repo content
+        uses: actions/checkout@v2 # checkout the repository content
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' # install the python version needed
 
-    - name: Run script
-      run: python script.py
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: execute py script # run main.py
+        env:
+          SOME_SECRET: ${{ secrets.SOME_SECRET }}
+        run: python main.py
+
+      - name: commit files
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add -A
+          git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
+
+      - name: push changes
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main 
