--- a/github/workflow/ci.yml
+++ b/github/workflow/ci.yml
@@ -1,4 +1,61 @@
-name: main.py
+name: Trigger MessageSender
+
+on:
+  schedule:
+    - cron: '* * * * *'  # Trigger every day at 9:00 AM UTC
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: pip install twilio
+
+    - name: Execute MessageSender.py
+      run: python MessageSender.py
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+"""name: main.py
 
 on:
   schedule:
@@ -39,3 +96,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main 
+"""
