--- a/.github/workflows/Script_Runner.yml
+++ b/.github/workflows/Script_Runner.yml
@@ -2,7 +2,7 @@ name: Python application
 
 on:
   schedule:
-  - cron: "* * * * * Contest-Reminder/MessageSender.py >/dev/null 2>&1"
+  - cron: "* * * * *"
   push:
     branches: [ "main" ]
   pull_request:
@@ -23,3 +23,5 @@ jobs:
       run: 
         python -m pip install --upgrade pip
         pip install twilio
+    - name: Execute Python script
+      run: python MessageSender.py
