--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,7 +2,7 @@ name: Contest Script Runner
 
 on:
   schedule:
-  #- cron: "* * * * *"
+  - cron: "* * * * *"
   push:
     branches: [ "main" ]
   pull_request:
